recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:3: error: ')' expected but integer literal found.
	if(step s== 0)
                    ^Spiral:8: error: illegal start of simple expression
} 
^