recursion.lessons.recursion.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {
	if(step s== 0)
	return
	else { 
		spiral(steps - 1 ,angle,length,increment)
}
}